Refactor Helm chart into modular structure

--- a/charts/agent/templates/deployment.yaml
+++ b/charts/agent/templates/deployment.yaml
@@ -16,18 +16,18 @@ spec:
     spec:
       containers:
         - name: bytebot-agent
-          image: "{{ .Values.bytebotAgent.image.repository }}:{{ .Values.bytebotAgent.image.tag }}"
-          imagePullPolicy: {{ .Values.bytebotAgent.image.pullPolicy }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: DATABASE_URL
-              value: "{{ .Values.bytebotAgent.env.DATABASE_URL }}"
+              value: "{{ .Values.env.DATABASE_URL }}"
             - name: BYTEBOT_DESKTOP_BASE_URL
-              value: "{{ .Values.bytebotAgent.env.BYTEBOT_DESKTOP_BASE_URL }}"
+              value: "{{ .Values.env.BYTEBOT_DESKTOP_BASE_URL }}"
             - name: ANTHROPIC_API_KEY
-              value: "{{ .Values.bytebotAgent.env.ANTHROPIC_API_KEY }}"
+              value: "{{ .Values.env.ANTHROPIC_API_KEY }}"
             - name: OPENAI_API_KEY
-              value: "{{ .Values.bytebotAgent.env.OPENAI_API_KEY }}"
+              value: "{{ .Values.env.OPENAI_API_KEY }}"
             - name: GOOGLE_API_KEY
-              value: "{{ .Values.bytebotAgent.env.GOOGLE_API_KEY }}"
+              value: "{{ .Values.env.GOOGLE_API_KEY }}"
           ports:
             - containerPort: 9991
