--- a/charts/database/templates/service.yaml
+++ b/charts/database/templates/service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   name: bytebot-postgres
 spec:
-  type: {{ .Values.postgres.service.type }}
+  type: {{ .Values.service.type }}
   selector:
     app: bytebot-postgres
   ports:
-    - port: {{ .Values.postgres.service.port }}
+    - port: {{ .Values.service.port }}
       targetPort: 5432
       name: postgres
