--- a/charts/database/templates/pvc.yaml
+++ b/charts/database/templates/pvc.yaml
@@ -7,4 +7,4 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.postgres.persistence.storage }}
+      storage: {{ .Values.persistence.storage }}
