--- a/packages/bytebot-agent/package.json
+++ b/packages/bytebot-agent/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bytebot-agent",
+  "name": "augments-agent",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
-    "@bytebot/shared": "../shared",
+    "@augments/shared": "../shared",
     "@google/genai": "^1.8.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
