--- a/packages/bytebotd/package.json
+++ b/packages/bytebotd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bytebotd",
+  "name": "augmentsd",
   "version": "0.0.1",
   "email": "support@bytebot.ai",
   "description": "Bytebot daemon",
@@ -26,7 +26,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@bytebot/shared": "file:../shared",
+    "@augments/shared": "file:../shared",
     "@nestjs/common": "^11.1.2",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
