fix: Force Railway cache invalidation and remove conflicting configs
- Update nixpacks.toml with cache invalidation to force fresh build
- Remove railway.toml and Procfile to avoid configuration conflicts
- Railway should now use only nixpacks.toml configuration
- This should resolve the docker-compose build step issue

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -15,3 +15,7 @@ cmds = [
 
 [start]
 cmd = 'cd packages/augments-ui && pnpm start'
+
+# Force cache invalidation
+[cache]
+paths = ['packages/shared/node_modules', 'packages/augments-ui/node_modules', 'packages/augments-ui/.next']
