fix: Force Railway to use fresh configuration
- Clear nixpacks cache completely to force fresh build
- Add .railwayignore to exclude problematic docker files
- Add Dockerfile as alternative build method
- This should finally resolve the docker-compose caching issue

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -16,6 +16,6 @@ cmds = [
 [start]
 cmd = 'cd packages/augments-ui && pnpm start'
 
-# Force cache invalidation
+# Clear all caches to force fresh build
 [cache]
-paths = ['packages/shared/node_modules', 'packages/augments-ui/node_modules', 'packages/augments-ui/.next']
+paths = []
