--- a/packages/bytebot-llm-proxy/litellm-config.yaml
+++ b/packages/bytebot-llm-proxy/litellm-config.yaml
@@ -10,6 +10,10 @@ model_list:
       api_key: os.environ/ANTHROPIC_API_KEY
 
   # OpenAI Models
+  - model_name: gpt-5.1
+    litellm_params:
+      model: openai/gpt-5.1
+      api_key: os.environ/OPENAI_API_KEY
   - model_name: gpt-4.1
     litellm_params:
       model: openai/gpt-4.1
